--- a/todoList/todo_list_app_class/package.json
+++ b/todoList/todo_list_app_class/package.json
@@ -35,7 +35,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "eslint-plugin-react": "^7.27.0"
-  }
+  "devDependencies": {}
 }
